릴리즈 빌드, dll 만들기, dll 가져오기

--- a/HelloWPFApp/HelloWPFApp.csproj
+++ b/HelloWPFApp/HelloWPFApp.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="ExpenseIt">
+      <HintPath>..\ExpenseIt\bin\Debug\net8.0-windows\ExpenseIt.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
